Bug 252306 - Tools Calendar creator - print to PDF file size for 12 pages 80-110 MB = about 30x larger than a year ago
Summary: Tools Calendar creator - print to PDF file size for 12 pages 80-110 MB = abou...
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-Generic-Calendar (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-25 05:51 UTC by Hans Neukomm
Modified: 2016-07-10 05:33 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hans Neukomm 2010-09-25 05:51:04 UTC
Version:           1.2.0 (using KDE 4.4.4) 
OS:                Linux

When using Calendar creator > print to PDF file ( in both Gwenview OR digikam same results ) I get an average PDF file size of 80MB-110 MB for a calendar created with 12 pics half page, each jpg picture 1600x1200px 85% compression. Each of the 12 calendar jpg photos has an average file size of 350-380kb. That total calendar file size is a HUGE file size compared to identical PDF calendar size last year being in the range of 2 - 6 MB only for a full identical calendar.
.
I also did a test calendar using thumbnails only. with file size 3-4 kb per pic and the full calendar still is 59.2 MB !!

When I open ONE such full size photo in konqueror/KDE and print the same photo size 354kb to PDF directly (without calendar) then the PDF is 433kb ( picture fills half page like in calendar).

It seems that somewhere in the calendar processing - BEYOND the regular KDE print to file for pictures - the file size is artificially inflated.

This situation can be repeated and always results in same excessive file size.

I am aware that this years calendar image print quality is far superior to last years, but comparing the regular print to PDF file size of a single image with the calendar size it is obvious that there is a bug somewhere in calendar printing (pre???)-processing when combining calendar plus images.

Reproducible: Always

Steps to Reproduce:
just take 12 wallpapers any kind, file size 1600x1200px jpg 85% compressed - file size about 350-450 kb each
and print calendar to PDF file using any of gwenview or digikam

to compare "normal expected file size"

use any of the pictures used in a test calendar, in KDE and print to PDF file without calendar - just KDE/konqueror
note normal file size of that PDF file

Actual Results:  
File size oversized by factor 10-30 compared with last years PDF file size of calendars with identical images used.

Expected Results:  
A PDF file size (for this years improved image quality) in the range of 8-12 MB

The oversized calendar files can be seen at
http://www.kriyayoga.com/calendar/free_printable_calendar.html
Comment 1 Georgi 2010-09-25 14:07:59 UTC
I have exactly the same behavior:
using Gwenview v.1.2.0 on openSUSE 11.3 with KDE 4.4.4, when I create calendar with 'print to PDF' option, gile size is 80+ Mb.
Comment 2 Hans Neukomm 2010-09-25 14:25:20 UTC
tks


On Sat, 2010-09-25 at 14:08 +0200, Georgi wrote:

> https://bugs.kde.org/show_bug.cgi?id=252306
> 
> 
> Georgi <georgi@allabouthappylife.com> changed:
> 
>            What    |Removed                     |Added
> ----------------------------------------------------------------------------
>                  CC|                            |georgi@allabouthappylife.co
>                    |                            |m
> 
> 
> 
> 
> --- Comment #1 from Georgi <georgi allabouthappylife com>  2010-09-25 14:07:59 ---
> I have exactly the same behavior:
> using Gwenview v.1.2.0 on openSUSE 11.3 with KDE 4.4.4, when I create calendar
> with 'print to PDF' option, gile size is 80+ Mb.
>
Comment 3 Andi Clemens 2011-10-25 22:25:58 UTC
This is because the plugin sets the QPrinter device to HighResolution, which is 1200dpi for Postscript prints.
See http://doc.qt.nokia.com/4.7/qprinter.html#PrinterMode-enum

Maybe we should add a config item to the wizard where the user can choose the resolution of the print.
Comment 4 Andi Clemens 2011-10-25 22:26:43 UTC
With QPrinter::ScreenResolution I get an PDF of approx. 1.6 MB, with HighResolution it is 126 MB
Comment 5 Andi Clemens 2011-10-25 22:55:19 UTC
Git commit f1c71abd6c7fc3d969397043969117fd81bb7cfc by Andi Clemens.
Committed on 26/10/2011 at 00:53.
Pushed by aclemens into branch 'master'.

Added option to choose the resolution of the printout (High / Low). Default is
High: QPrinter::HighResolution

BUG: 252306

M  +20   -0    calendar/print/calsettings.cpp
M  +13   -10   calendar/print/calsettings.h
M  +90   -3659 calendar/ui/caltemplate.ui
M  +4    -0    calendar/wizard/caltemplate.cpp
M  +1    -3    calendar/wizard/calwizard.cpp

http://commits.kde.org/kipi-plugins/f1c71abd6c7fc3d969397043969117fd81bb7cfc
Comment 6 Miles H 2012-12-09 12:06:49 UTC
This problem still exists on Kubuntu 12.04 (KDE 4.8.5) with Digikam 2.5.0 build date Mar 16 2012.

Printing a 3-page '5x4' format calendar works but generates a 176MB pdf, source photo files are ~12M each.

I checked for the resolution-control option Andi describes above but it's not in the Print Assistant workflow, although the digikam build is several months newer than the commit date above. 

Which versions of digikam / kipiplugins contain the fix?  Alternatively, how can I apply the QPrinter::Resolution setting for a one-off so that it will apply to a print job from DigiKam? 

thanks

Miles