Added option to choose the resolution of the printout (High / Low). Default is High: QPrinter::HighResolution

BUG: 252306